# vectorworks-bridge

./: .gitignore  COWORK_HANDOFF.md  LICENSE  Makefile  PROTOCOL.md  README.md  pyproject.toml
tests/: test_cache.py  test_discovery.py  test_parser.py  test_writer.py
tests/fixtures/: celine_sample.xml
vw_bridge/: __init__.py  cache.py  config.py  discovery.py  parser.py  server.py  watcher.py  writer.py
