[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vw-bridge"
version = "0.1.0"
description = "Vectorworks fixture data → MCP server for Co-Work sessions"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
vw-bridge = "vw_bridge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["vw_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
